--- a/src/main/resources/assets/test_/lang/en_us.json
+++ b/src/main/resources/assets/test_/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "item.test_.scoobysnack": "Scoobysnack",
   "item.test_.black_square": "Black Square",
   "item.test_.hulk_armor_leggings": "Hulk Armor Leggings",
   "item.test_.hulk_armor_helmet": "Hulk Armor Helmet",
